Connected to mongo

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "- Fork this repo, and submit a pull request when you are done.",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mongoose": "^4.13.9"
   },
   "devDependencies": {},
   "scripts": {
