--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/webermn15/Weekend-Express-Homework#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "method-override": "^2.3.10",
     "mongoose": "^4.13.9"
   }
 }
