Created new template that displays a form for a user to submit

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "- Fork this repo, and submit a pull request when you are done.",
   "main": "server.js",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "mongoose": "^4.13.9"
   },
