--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "- Fork this repo, and submit a pull request when you are done.",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "method-override": "^2.3.10",
     "mongoose": "^4.13.9"
   },
   "devDependencies": {},
