--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.4.0",
     "method-override": "^2.3.10",
     "mongoose": "^4.13.9"
   }
