--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/somersbmatthews/Weekend-Express-Homework/issues"
   },
-  "homepage": "https://github.com/somersbmatthews/Weekend-Express-Homework#readme"
+  "homepage": "https://github.com/somersbmatthews/Weekend-Express-Homework#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.4.0",
+    "method-override": "^2.3.10",
+    "mongoose": "^4.13.9"
+  }
 }
