--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "express": "^4.16.2",
     "method-override": "^2.3.10",
     "mongoose": "^4.13.9"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.4.0"
   }
 }
